@@ -10,8 +10,8 @@
     </parent>
     
     <groupId>com.github.scribejava</groupId>
-    <artifactId>scribejava-ning</artifactId>
-    <name>ScribeJava Ning Async client support</name>
+    <artifactId>scribejava-httpclient-ning</artifactId>
+    <name>ScribeJava Ning Async Http Client support</name>
     <packaging>jar</packaging>
 
     <dependencies>
